@@ -606,10 +606,14 @@ config file.
 
 The maximum depth of nested includes is 16.
 
-.IP "@@include \fBDIRECTORY\fR \fBREGEX\fR"
+.IP "@@include \fBDIRECTORY\fR \fBREGEX\fR [\fBRULE_PREFIX\fR]"
 Include all (regular) files found in \fBDIRECTORY\fR matching regular
 expression \fBREGEX\fR (sub-directories are ignored). The file are included in
 lexical sort order.
+
+If \fBRULE_PREFIX\fR is set, all rules included by the statement are prefixed
+with given \fBRULE_PREFIX\fR (added in AIDE v0.18). Prefixes from nested
+include statements are concatenated.
 
 The content of the files is used as if it were inserted in this
 part of the config file.
@@ -617,7 +621,7 @@ part of the config file.
 .TP
 @@x_include \fBFILE\fR
 .TQ
-@@x_include \fBDIRECTORY\fR \fBREGEX\fR
+@@x_include \fBDIRECTORY\fR \fBREGEX\fR [\fBRULE_PREFIX\fR]
 \fB@x_include\fR is identical to \fB@@include\fR, except that if a config file
 is executable is is run and the output is used as config.
 
